# Zombos

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DOCS.html  DOCS.txt  README.md  changelog.txt  full changelog.txt  imgui.ini  list.txt  main.cpp  newStructure  output_log.txt  resource.h  runicdepths.sln  runicdepths.vcxproj  runicdepths.vcxproj.filters  workedon.txt  zyzzyx.save
Antibox Docs/: DOCS.html
Apps/: caves_main.cpp  falling_sand_main.cpp
Examples/: caves_main.cpp  imgui.ini  ttrpg_imgui.ini  ttrpg_stat_main.cpp
Libraries/include/antibox/core/: antibox.h  audio.cpp  audio.h  engine.cpp  engine.h  imguiwindow.cpp  imguiwindow.h  log.cpp  log.h  mathlib.h  window.cpp  window.h
Libraries/include/antibox/graphics/: helpers.cpp  helpers.h  rendercommands.cpp  sprite.cpp  texture.cpp  texture.h
Libraries/include/antibox/graphics/3d/: camera.cpp  camera.h
Libraries/include/antibox/managers/: factory.h
Libraries/include/antibox/objects/: gameobject.h  scene.cpp  scene.h  tokenizer.h
Libraries/include/antibox/objects/3d/: model.cpp  model.h
Libraries/include/antibox/server/: server.cpp  server.hpp  utils.hpp
Libraries/include/imgui/: imgui.cpp  imgui.h
changelogs/: full changelog.txt
dat/: Chunk.h  FactionManager.h  Game.h  cosmetic.cpp  cosmetic.h  entities.h  filemanager.h  glyphmanager.h  inventory.h  items.h  map.h  nameGenerate.cpp  uiscreen.h
dat/eid/: Chunk1  dialogue.eid  factions.eid  game_settings.eid  glyphs.eid  ground_items.eid  item_data.eid  items.eid  save.eid  tiles.eid
dat/eid/backgrounds/: bgs.eid
dat/eid/dialogue/: dialogue_calm.eid  dialogue_fear.eid  dialogue_happy.eid  dialogue_trust.eid
dat/eid/items/: clothing.eid  cosmetic_tools.eid  crafted_materials.eid  crafting_recipes.eid  custom_items.eid  decoration.eid  droppable.eid  food.eid  item_lists.eid  materials.eid  misc.eid  nature_items.eid  survival_items.eid  trade_valuables.eid  weapons.eid
dat/eid/items/custom/: custom_items.eid  example_custom.eid
dat/eid/loot_tables/: house.eid  trade.eid
dat/eid/structures/: houses.eid  newStructure  oldroads.eid  structs.eid  town.eid
dat/eid/tiles/: tile_lists.eid  tiles.eid
dat/map/: Chunk-858993460-858993460  Chunk247249  Chunk247250  Chunk247251  Chunk248248  Chunk248249  Chunk248250  Chunk248251  Chunk249248  Chunk249249  Chunk249250  Chunk249251  Chunk250248  Chunk250249  Chunk250250  Chunk250251  Chunk251248  Chunk251249  Chunk251250  Chunk251251
dat/modding/: 11_19_2025.json
dat/modding/pixelfont-offline/: fonthx-assets.js  index.html  script.js  style.css
dat/modding/pixelfont-offline/lang/: en-US.json  index.html  lang-assets.js
dat/saves/adfdf/entities/: Frgnsk.eid  Pbocmp.eid  Qtveaz.eid  Uqefye.eid  names.eid
dat/saves/alc/entities/: Aralin.eid  names.eid
dat/saves/asdasdas/entities/: Dyykzq.eid  names.eid
dat/saves/asdfffd/entities/: Evmklk.eid  names.eid
dat/saves/death test/entities/: Lyaielyr.eid  names.eid
dat/saves/ffff/entities/: Vkhcpm.eid
dat/saves/hitter/entities/: Yptzdh.eid  names.eid
dat/saves/memorytest/entities/: Fhxkny.eid  Rgptma.eid  Ubtpxu.eid  Vvtvmj.eid  names.eid
dat/saves/memtest 2/entities/: Kauojm.eid  names.eid
dat/saves/muddy/entities/: Uhhqoz.eid  names.eid
dat/saves/newest/entities/: Fdaaqv.eid  Gvikfg.eid  Unyhhn.eid  Xlyqcc.eid  Yllest.eid  names.eid
dat/saves/newtest/entities/: Iucyqn.eid  names.eid
dat/saves/nyyny/entities/: Jilhjn.eid  names.eid
dat/saves/painfulk/entities/: Jxdxxg.eid  Wpwjbz.eid  Zxwemx.eid  names.eid
dat/saves/plasd/entities/: Daurinr.eid  Zaonk.eid  Zaorari.eid  names.eid
dat/saves/save test/entities/: Lzyuwb.eid  Omfkox.eid  names.eid
dat/saves/saveentity/entities/: Ribblk.eid
dat/saves/sound test/entities/: Ytgrwa.eid  names.eid
dat/saves/test/entities/: 248250.eid  248251.eid  249249.eid  249250.eid  249252.eid  250251.eid  250252.eid  251249.eid  251250.eid  251251.eid  Human.eid
dat/saves/vv/entities/: Ifjakx.eid  names.eid
dat/saves/you got he/entities/: Joararal.eid  Toaur.eid  names.eid
dat/saves/zdd/entities/: names.eid
dnd_res/: statsheet.json
